--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@azure/msal-browser": "^2.31.0",
     "@emotion/css": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,12 +13,14 @@
     "@types/node": "^16.11.54",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-lottie": "^1.2.6",
     "@types/react-modal": "^3.13.1",
     "apisauce": "^2.1.6",
     "enzyme": "^3.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-lottie": "^1.2.3",
     "react-modal": "^3.15.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
