--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/react-lottie": "^1.2.6",
     "@types/react-modal": "^3.13.1",
     "apisauce": "^2.1.6",
+    "crypto": "^1.0.1",
     "enzyme": "^3.11.0",
+    "jest-canvas-mock": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
