--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@azure/msal-browser": "^2.31.0",
+    "@azure/msal-react": "^1.5.0",
     "@babel/core": "^7.16.0",
     "@emotion/css": "^11.10.0",
     "@emotion/styled": "^11.10.0",
