--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-lottie": "^1.2.6",
     "@types/react-modal": "^3.13.1",
+    "@types/uuid": "^9.0.0",
+    "antd": "^5.0.7",
     "apisauce": "^2.1.6",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
@@ -72,6 +74,7 @@
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.7.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
